data/derived/comb/progs/unify/prog7349.ml.out
Characters 115-117:
  | x::x'::x'' -> [(x*i)/10]@[((x*i) mod 10) + x']@ mulByDigit i x'::x'';;
                                                                 ^^
Error: This expression has type int but an expression was expected of type
         int list
